# ocaml-mad

./: .gitignore  .travis.yml  CHANGES  Makefile  Makefile.in  README  README.md  bootstrap  configure.ac  dune-project  index.html  mad.opam
.github/workflows/: doc.yml  main.yml
examples/: Makefile  Makefile.decode_msg  Makefile.mp32wav  Makefile.mp32wav.in  Makefile.mp3info  Makefile.mp3info.in  configure.ac  decode_msg.ml  mp32wav.ml  mp3info.ml  mp3stream2wav.ml
examples/decode_msg/: Makefile  decode_msg.ml
examples/mp32wav/: Makefile  mp32wav.ml
examples/mp3info/: Makefile
examples/mp3stream2wav/: Makefile  mp3stream2wav.ml
mad/: index.html
mad/Mad/: index.html
src/: META.in  Makefile.in  OCamlMakefile  mad.ml  mad.mli  mad_stubs.c
src/config/: discover.ml
