opam-version: "2.0"
name: "mad"
version: "0.5.0"
maintainer: "Romain Beauxis <toots@rastageeks.org>"
authors: "The Savonet Team <savonet-users@lists.sourceforge.net>"
homepage: "https://github.com/savonet/ocaml-mad"
build: [
  ["./bootstrap"] {dev}
  ["./configure" "--prefix" prefix]
  [make "clean"] {dev}
  [make]
]
install: [
  [make "install"]
]
depends: [
  "ocaml"
  "conf-autoconf" {dev}
  "ocamlfind" {build}
]
depexts: [
  ["libmad-dev"] {os-distribution = "alpine"}
  ["libmad"] {os-distribution = "archlinux"}
  ["libmad-devel"] {os-distribution = "centos"}
  ["libmad-devel"] {os-distribution = "fedora"}
  ["libmad-devel"] {os-family = "suse"}
  ["libmad0-dev"] {os-family = "debian"}
  ["libmad"] {os-distribution = "nixos"}
  ["mad"] {os = "macos" & os-distribution = "homebrew"}
]
bug-reports: "https://github.com/savonet/ocaml-mad/issues"
dev-repo: "git+https://github.com/savonet/ocaml-mad.git"
synopsis:
  "Bindings for the mad library which provides functions for encoding wave audio files into mp3"
